Bug 1394561 - Ensure WebVR content can catch up when IPC messages are delayed r=daoshengmu,kanru

MozReview-Commit-ID: F4NKtyaNwEo